# ml_api

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
src/ml_api/: cluster_model.py  main.py
tests/: test_clustering_model.py
tests/data/: german_credit_data_testing.csv
