[tool.poetry]
name = "ml-api"
version = "0.1.0"
description = ""
authors = ["Alexander Gnusarev <alexander.gnussarev@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.1"
pylint = "^3.2.6"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
